<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:enabled="true"
      android:key="@string/pref_category_key_camera"
      android:title="카메라">

    <ListPreference
        android:key="@string/pref_key_rear_camera_preview_size"
        android:persistent="true"
        android:title="후면 카메라 크기"/>

    <ListPreference
        android:key="@string/pref_key_front_camera_preview_size"
        android:persistent="true"
        android:title="전면 카메라 크기"/>

    <ListPreference
        android:key="@string/pref_key_camerax_rear_camera_target_resolution"
        android:persistent="true"
        android:title="cameraX 후면 카메라 대상 해상도"/>

    <ListPreference
        android:key="@string/pref_key_camerax_front_camera_target_resolution"
        android:persistent="true"
        android:title="cameraX 전면 카메라 대상 해상도"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_camera_live_viewport"
        android:persistent="true"
        android:summary="감지시 카메라 미리보기를 차단하지 마십시오"
        android:title="라이브 뷰 포인트 활성화"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_category_object_detection">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_live_preview_object_detector_enable_multiple_objects"
        android:persistent="true"
        android:title="@string/pref_title_object_detector_enable_multiple_objects"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_live_preview_object_detector_enable_classification"
        android:persistent="true"
        android:title="@string/pref_title_object_detector_enable_classification"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_category_face_detection">

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_landmark_mode_no_landmarks"
        android:entries="@array/pref_entries_face_detector_landmark_mode"
        android:entryValues="@array/pref_entry_values_face_detector_landmark_mode"
        android:key="@string/pref_key_live_preview_face_detection_landmark_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_landmark_mode"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_contour_mode_all_contours"
        android:entries="@array/pref_entries_face_detector_contour_mode"
        android:entryValues="@array/pref_entry_values_face_detector_contour_mode"
        android:key="@string/pref_key_live_preview_face_detection_contour_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_contour_mode"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_classification_mode_no_classifications"
        android:entries="@array/pref_entries_face_detector_classification_mode"
        android:entryValues="@array/pref_entry_values_face_detector_classification_mode"
        android:key="@string/pref_key_live_preview_face_detection_classification_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_classification_mode"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast"
        android:entries="@array/pref_entries_face_detector_performance_mode"
        android:entryValues="@array/pref_entry_values_face_detector_performance_mode"
        android:key="@string/pref_key_live_preview_face_detection_performance_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_performance_mode"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_live_preview_face_detection_face_tracking"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_face_tracking"/>

    <EditTextPreference
        android:defaultValue="0.1"
        android:dialogMessage="@string/pref_dialog_message_face_detector_min_face_size"
        android:key="@string/pref_key_live_preview_face_detection_min_face_size"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_min_face_size"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="AI트레이너">
    <ListPreference
        android:defaultValue="@string/pref_entry_values_pose_detector_performance_mode_fast"
        android:entries="@array/pref_entries_values_pose_detector_performance_mode"
        android:entryValues="@array/pref_entry_values_pose_detector_performance_mode"
        android:key="@string/pref_key_live_preview_pose_detection_performance_mode"
        android:persistent="true"
        android:title="모드"
        android:summary="%s"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_live_preview_pose_detector_show_in_frame_likelihood"
        android:persistent="true"
        android:title="프레임 가능도 나타내기"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pose_detector_visualize_z"
        android:persistent="true"
        android:title="z값 나타내기"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pose_detector_rescale_z"
        android:persistent="true"
        android:title="z값 재조정"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pose_detector_run_classification"
        android:persistent="true"
        android:title="AI트레이너 모드 활성화"
        android:summary="이 기능을 켜주셔야합니다!"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="셀카 분할">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_segmentation_raw_size_mask"
        android:persistent="true"
        android:title="@string/pref_title_segmentation_raw_size_mask"/>
  </PreferenceCategory>
</PreferenceScreen>
